--- a/front/package.json
+++ b/front/package.json
@@ -56,5 +56,6 @@
   "devDependencies": {
     "@types/lodash": "^4.14.188",
     "@types/styled-components": "^5.1.26"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
