--- a/back/.gitignore
+++ b/back/.gitignore
@@ -7,7 +7,7 @@ dist/*
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-.idea
+../.idea
 *.iml
 out
 gen
